# ls-py175_flash_cards

./: .gitignore  app.py  pyproject.toml
flashcards/data/deck1/: cards.yml
flashcards/data/deck2/: cards.yml
flashcards/data/deck3/: cards.yml
flashcards/data/deck4/: cards.yml
flashcards/data/deck5/: cards.yml
flashcards/data/deck6/: cards.yml
static/stylesheets/: application.css
templates/: create_flashcard.html  deck.html  edit_deck.html  flashcards.html  rename_deck.html
tests/: test_app.py
